@@ -155,6 +155,8 @@ fileio      = false
 #                                                      If it is not set, Windows Vista/7/8/10 and higher may upscale the DOSBox-X window
 #                                                      on higher resolution monitors which is probably not what you want.
 #                                                      Possible values: true, false, 1, 0, auto.
+#                                      quit warning: Set this option to indicate whether DOSBox-X should show a warning message when the user tries to close its window.
+#                                                    If set to auto (default), DOSBox-X will warn only if at least one file handle is still open.
 #                                     keyboard hook: Use keyboard hook (currently only on Windows) to catch special keys and synchronize the keyboard LEDs with the host
 #                                            weitek: If set, emulate the Weitek coprocessor. This option only has effect if cputype=386 or cputype=486.
 #                               bochs debug port e9: If set, emulate Bochs debug port E9h. ASCII text written to this I/O port is assumed to be debug output, and logged.
@@ -467,6 +469,7 @@ language                                          =
 title                                             = 
 enable 8-bit dac                                  = true
 dpi aware                                         = auto
+quit warning                                      = auto
 keyboard hook                                     = false
 weitek                                            = false
 bochs debug port e9                               = false
